feat: list optional updated at parameter implemented
